--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ ext{
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.google.apis:google-api-services-youtube:v3-rev173-1.22.0'
+    compile 'com.google.api-client:google-api-client:1.20.0'
     compile "com.android.support:support-v13:${supportLibVersion}"
     compile "com.android.support:appcompat-v7:${supportLibVersion}"
     compile "com.android.support:preference-v14:${supportLibVersion}"
