Final hack version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".FakeActivity"
-            android:label="@string/fake_app_name"
+            android:label="@string/app_name"
             android:theme="@style/Fake.AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
